# budgie-network-applet

./: README.md  meson.build
data/: com.github.danielpinto8zz6.budgie-network-applet.plugin.in  meson.build
po/: en_GB.po
src/: Applet.vala  meson.build
src/Widgets/: Container.vala  DisplayWidget.vala  EtherInterface.vala  ModemInterface.vala  OverlayIcon.vala  PopoverWidget.vala  Separator.vala  Switch.vala  VpnInterface.vala  WifiInterface.vala
src/common/Widgets/: AbstractModemInterface.vala  AbstractVpnInterface.vala  AbstractWifiInterface.vala  VpnMenuItem.vala  WidgetNMInterface.vala  WifiMenuItem.vala
